# mpcsl

./: .codecov.yml  .dockerignore  .gitignore  .gitmodules  .travis.yml  CITATION.cff  Dockerfile  Dockerfile.base  Dockerfile.nginx  Dockerfile.scheduler  Dockerfile.ui  Dockerfile.ui.base  EXTENSION.md  LICENSE  README.md  Testing.ipynb  algorithms.py  build.sh  deploy_checker.py  deploy_dev.sh  docker-compose-dev.yml  docker-compose-nginx.yml  docker-compose-prod.yml  docker-compose-staging.yml  docker-compose.yml  garden.yml  job_scheduler.py  manage.py  nginx.conf  requirements.r  requirements.txt  seed.py  server.py  setup.cfg  setup_algorithms.py  skaffold.yml  uwsgi.ini
.circleci/: config.yml
.github/workflows/: mpci-execution-cupc.publish.yml  mpci-execution-python.publish.yml  mpci-execution-r.publish.yml
.travis/: deploy-internal.sh  deploy.sh  deploy_key.enc
backend/src/: app.py  appfactory.py  config.py  routes.py  server.py
backend/test/: test_server.py
cluster-deployments/: nginx-ingress-values.yml
confdefault/: algorithms.json  backend.env
deployment-resources/: DEPLOYMENT.md  loki-stack-values.yaml  nfs-client-values.yml  nginx-ingress-values.yml
docker/: backend.Dockerfile  r-executor.Dockerfile  scheduler.Dockerfile
frontend/: package.json  tslint.json
frontend/src/: App.css  App.tsx  GraphData.ts  colors.ts  index.tsx  serviceWorker.ts  types.ts
helm/mpci/: Chart.yaml  requirements.yaml  values.yaml
migrations/: alembic.ini
migrations/versions/: 155fe996403c_link_edgeannotation_to_edge.py  419692981146_add_edge_weight_edge_information_.py  682a149b755a_merge.py  687912862702_change_edge_information_to_include_.py  6afc1d19f183_merge.py  7c50c2f7f14e_change_database_to_work_with_.py  8e2bc5703148_delete_sepset_names.py  a121f15bd89d_merge.py  bde7db78a4fb_add_time_statistics.py  dc1f7c0e8c6d_added_job_log_column.py  f7ac308639eb_add_edge_weight.py  (+1 more)
scripts/: bootstrap.sh  build_images.sh  cibuild.sh  console.sh  demo.sh  deploy_checker.py  push_images.sh  server.sh  setup.sh  setup_algorithms.py  setup_algorithms.sh  test.sh  update.sh
services/backend-image/: backend.Dockerfile  (+3 more)
src/: app.py  server.py
src/executionenvironments/cuda/src/test/: CMakeLists.txt  Makefile  correlationTest.cpp  inverseTest.cpp  main.cpp  skeletonTest.cpp  testHelper.cpp  testHelper.h
src/executionenvironments/cuda/src/test/cmake_modules/: FindLibR.cmake
src/executionenvironments/cuda/src/test/data/: 5v_1-3-2.csv  coolingData.csv
src/master/executor/algorithms/cpp/parallelpc/: CMakeLists.txt  README.md  concurrency.h  condition.cpp  graph.hpp  main.cpp  watcher.cpp  worker.cpp  worker.h
test/: factories.py
(+378 files in other folders)
